eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Attachment_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Attachment Data</relationshipLabel>
        <relationshipName>Attachment_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Docugen_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Docugen Job</label>
        <referenceTo>Docugen_Job__c</referenceTo>
        <relationshipLabel>Attachment Data</relationshipLabel>
        <relationshipName>Attachment_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Attachment Data</relationshipLabel>
        <relationshipName>Attachment_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attachment Data</label>
    <nameField>
        <label>Attachment Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attachment Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>